# AAA3

./: CMakeLists.txt
A3/: main.cpp  test-main.cpp
common/: circle.cpp  circle.hpp  composite-shape.cpp  composite-shape.hpp  rectangle.cpp  rectangle.hpp  shape.hpp  triangle.cpp  triangle.hpp
